public/css/style.css
body { 
	padding-top: 70px; 
}

.social-icons {
	width: 200px;
}

ul.social-slide a {
	background-image: url('/images/social-sprite.png');
	height: 62px;
	width: 64px;
	margin: 10px;
	display: block;
	transition: all ease 0.3s;
}

.facebook
{
	background-position: -10px -10px;
}

.facebook:hover
{
	background-position: -10px -94px;
}

.linkedin
{
	background-position: -346px -10px;
}

.linkedin:hover
{
	background-position: -346px -94px;
}

.google-plus
{
	background-position: -262px -10px;
}

.google-plus:hover
{
	background-position: -262px -94px;
}

.twitter
{
	background-position: -682px -10px;
}

.twitter:hover
{
	background-position: -682px -94px;
}

